# pyspextools

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CITATION.cff  LICENSE.txt  NOTICE  README.md  data.html  examples.html  genindex.html  index.html  install.html  io.html  objects.inv  ogip.html  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  tutorials.html  user.html
.doctrees/: data.doctree  environment.pickle  examples.doctree  index.doctree  install.doctree  io.doctree  ogip.doctree  tutorials.doctree  user.doctree
_modules/: index.html
_sources/: data.rst.txt  data.txt  examples.rst.txt  index.rst.txt  install.rst.txt  io.rst.txt  ogip.rst.txt  ogip.txt  tutorials.txt  user.txt
_static/: alabaster.css
doc/: Makefile
doc/source/: conf.py  (+9 more)
examples/: apec.html  apec.py  myusermodel.html  myusermodel.py
pyspex/: __init__.py  messages.py  user.py
pyspextools/: __init__.py  color.py  messages.py
reference/: data.html  io.html  ogip.html  user.html
scripts/: bkgsmooth  ogip2spex  ogipgenrsp  simres  tg2spex  tgcat2spex
tests/: test_color.py  test_data_badchannel.py  test_data_response.py  test_io_arf.py  test_io_convert_pha.py  test_io_convert_rmf.py  test_io_dataset.py  test_io_ogip.py  test_io_pha.py  test_io_pha2.py  test_io_region.py  test_io_res.py  test_io_rmf.py  test_io_rmfebounds.py  test_io_spo.py  test_io_tg.py
tutorials/: apec.html  bkgfitting.html  datasets.html  myusermodel.html  ogip2spex.html  ogipgenrsp.html  simres.html  tg2spex.html  tgcat2spex.html
(+124 files in other folders)
